fix: add row gap to tags

--- a/src/includes/styles/index.css
+++ b/src/includes/styles/index.css
@@ -291,6 +291,7 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   column-gap: 1ex;
+  row-gap: 1ex;
 }
 
 .tag {
